Update Android workflow to use Ubuntu 22.04

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,12 +6,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-    - name: Build APK
+    - name: Build APK with Buildozer
       uses: digreatbrian/buildozer-action@v2
       with:
         command: buildozer android debug
